Created section and articles for html file

--- a/index.html
+++ b/index.html
@@ -28,5 +28,35 @@
         </ul>
       </nav>
     </header>
+
+    <section id="about-me">
+      <article>
+        <h2>About Me</h2>
+        <p>what im going to write</p>
+      </article>
+    </section>
+
+    <section id="work">
+      <article>
+        <h2>About Me</h2>
+        <p>what im going to write</p>
+      </article>
+    </section>
+
+    <section id="contact-me">
+      <article>
+        <h2>About Me</h2>
+        <p>what im going to write</p>
+      </article>
+      <article>
+      </section>
+
+      <section id="resume">
+        <article>
+        <h2>About Me</h2>
+        <p>what im going to write</p>
+      </article>
+    </section>
+
   </body>
 </html>
