Added more css styling and edited html tagging corresponding to html edits

--- a/index.html
+++ b/index.html
@@ -29,11 +29,18 @@
       </nav>
     </header>
 
+    <figure>
+      <img src="./assets/images/rdj pic.jpg"
+      alt="Robert Downey Jr. Jericho bomb scene representing Adam Rosenberg"/>
+    </figure>
+
     <section id="about-me">
-      <article>
+      <article class="main-content">
         <h2>About Me</h2>
+        </article>
+        <aside class="sidebar">
         <p>what im going to write</p>
-      </article>
+    </aside>
     </section>
 
     <section id="work">
