Edited html file to have better elements and positioning on page as well as added css styling to match new html content

--- a/index.html
+++ b/index.html
@@ -30,40 +30,50 @@
     </header>
 
     <figure>
-      <img src="./assets/images/rdj pic.jpg"
-      alt="Robert Downey Jr. Jericho bomb scene representing Adam Rosenberg"/>
+      <img
+        src="./assets/images/rdj pic.jpg"
+        alt="Robert Downey Jr. Jericho bomb scene representing Adam Rosenberg"
+      />
     </figure>
 
-    <section id="about-me">
-      <article class="main-content">
+    <section class="content" id="about me">
         <h2>About Me</h2>
-        </article>
-        <aside class="sidebar">
-        <p>what im going to write</p>
-    </aside>
-    </section>
-
-    <section id="work">
-      <article>
-        <h2>About Me</h2>
-        <p>what im going to write</p>
+      </article>
+      <article class="information">
+        <p>Hi, my name is Adam. My hope...</p>
       </article>
     </section>
 
-    <section id="contact-me">
-      <article>
-        <h2>About Me</h2>
-        <p>what im going to write</p>
-      </article>
-      <article>
-      </section>
-
-      <section id="resume">
-        <article>
-        <h2>About Me</h2>
-        <p>what im going to write</p>
+    <section class="content" id="work">
+        <h2>Work</h2>
+      <article class="information">
+      <aside class="sidebar">
+        <p> 
+          <a href="https://github.com/AcoderRose/Horiseon-Refractory-Code">
+          <img
+            src="./assets/images/screenshot-of-website.png"
+            alt="Horiseon-Refractory-Code">
+            </a>
+            </p>
       </article>
     </section>
 
+    <section class="content" id="contact-me">
+        <h2>Contact Me</h2>
+      <article class="information">
+        <p>
+      <a href="https://github.com/AcoderRose">Check out my profile on GitHub! </a>
+       </p>
+      </article>
+    </section>
+
+    <section class="content" id="resume">
+        <h2>Resume</h2>
+      <article class="information">
+        <p>
+
+        </p>
+      </article>
+    </section>
   </body>
 </html>
