Added working html links so that the page jumps to appropriate section when clicked in header nav bar as well as adjusted some css styling accordingly

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <a href="#about-me">About Me</a>
           </li>
           <li>
-            <a href="work">Work</a>
+            <a href="#work">Work</a>
           </li>
           <li>
-            <a href="contact-me">Contact Me</a>
+            <a href="#contact-me">Contact Me</a>
           </li>
           <li>
-            <a href="resume">Resume</a>
+            <a href="#resume">Resume</a>
           </li>
         </ul>
       </nav>
@@ -36,44 +36,45 @@
       />
     </figure>
 
-    <section class="content" id="about me">
-        <h2>About Me</h2>
-      </article>
-      <article class="information">
-        <p>Hi, my name is Adam. My hope...</p>
-      </article>
-    </section>
+    <main>
+      <section class="content">
+        <h2>About Me:</h2>
+        <article id="about me" class="information">
+          <p style="color: white">Hi, my name is Adam. My hope...</p>
+        </article>
+      </section>
 
-    <section class="content" id="work">
-        <h2>Work</h2>
-      <article class="information">
-      <aside class="sidebar">
-        <p> 
-          <a href="https://github.com/AcoderRose/Horiseon-Refractory-Code">
-          <img
-            src="./assets/images/screenshot-of-website.png"
-            alt="Horiseon-Refractory-Code">
+      <section class="content">
+        <h2>Work:</h2>
+        <article id="work" class="information">
+          <p>
+            <a href="https://github.com/AcoderRose/Horiseon-Refractory-Code">
+              <img
+                src="./assets/images/screenshot-of-website.png"
+                alt="Horiseon-Refractory-Code"
+              />
             </a>
-            </p>
-      </article>
-    </section>
+          </p>
+        </article>
+      </section>
 
-    <section class="content" id="contact-me">
-        <h2>Contact Me</h2>
-      <article class="information">
-        <p>
-      <a href="https://github.com/AcoderRose">Check out my profile on GitHub! </a>
-       </p>
-      </article>
-    </section>
+      <section class="content">
+        <h2>Contact Me:</h2>
+        <article id="contact-me" class="information">
+          <p>
+            <a href="https://github.com/AcoderRose"
+              >Check out my profile on GitHub!
+            </a>
+          </p>
+        </article>
+      </section>
 
-    <section class="content" id="resume">
-        <h2>Resume</h2>
-      <article class="information">
-        <p>
-
-        </p>
-      </article>
-    </section>
+      <section class="content">
+        <h2>Resume:</h2>
+        <article id="resume" class="information">
+          <p style="color: white">Placeholder words</p>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
