Made some changes to html elements and css styling in accordance to tutor session suggestions

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <figure>
       <img
-        src="./assets/images/rdj pic.jpg"
+        src="./assets/images/rdj-pic.jpg"
         alt="Robert Downey Jr. Jericho bomb scene representing Adam Rosenberg"
       />
     </figure>
@@ -39,22 +39,28 @@
     <main>
       <section class="content">
         <h2>About Me:</h2>
-        <article id="about me" class="information">
-          <p style="color: white">Hi, my name is Adam. My hope...</p>
+        <article id="about-me" class="information">
+          <p style="color: white">Hi, my name is Adam.</p>
         </article>
       </section>
 
       <section class="content">
         <h2>Work:</h2>
         <article id="work" class="information">
-          <p>
-            <a href="https://github.com/AcoderRose/Horiseon-Refractory-Code">
-              <img
-                src="./assets/images/screenshot-of-website.png"
-                alt="Horiseon-Refractory-Code"
-              />
-            </a>
-          </p>
+          <a href="https://github.com/AcoderRose/Horiseon-Refractory-Code">
+            <img
+              src="./assets/images/screenshot-of-website.png"
+              alt="Horiseon-Refractory-Code"
+            />
+          </a>
+
+          <a href="https://github.com/AcoderRose/prework-study-guide">
+            <img
+              class="coming-soon"
+              src="./assets/images/coming-soon-pic.jpg"
+              alt="prework-study-guide"
+            />
+          </a>
         </article>
       </section>
 
@@ -76,5 +82,11 @@
         </article>
       </section>
     </main>
+
+    <footer>
+      <p style="color: black" font size="100px">
+        Page designed by Adam Jacob Rosenberg
+      </p>
+    </footer>
   </body>
 </html>
