changed some of the html image elements and changed css styling accordingly

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
       <section class="content">
         <h2>About Me:</h2>
         <article id="about-me" class="information">
-          <p style="color: white">Hi, my name is Adam.</p>
+          <p style="color: white">
+Hey there, I'm Adam Jacob Rosenberg, a budding software developer ready to make my mark in the tech world. When I'm not knee-deep in code, you'll often find me gaming on my trusty PC or enjoying a slice of my favorite comfort food, pizza. My loyal companion, Laila, is always by my side, keeping me company during late-night coding sessions. As a die-hard Lakers fan, I bleed purple and gold, representing my hometown of Los Angeles with pride. Growing up in the heart of LA has instilled in me a deep appreciation for innovation and technology. Now, I'm excited to leverage my skills and passion to create impactful software solutions that make a difference.</p>
         </article>
       </section>
 
@@ -56,8 +57,8 @@
 
           <a href="https://github.com/AcoderRose/prework-study-guide">
             <img
-              class="coming-soon"
-              src="./assets/images/coming-soon-pic.jpg"
+              class="prework-study-guide"
+              src="./assets/images/prework-study-guide-pic.png"
               alt="prework-study-guide"
             />
           </a>
@@ -78,13 +79,20 @@
       <section class="content">
         <h2>Resume:</h2>
         <article id="resume" class="information">
+          <a href="https://www.linkedin.com/in/adam-rosenberg-8213a4a1/">
+            <img
+              class="coming-soon"
+              src="./assets/images/coming-soon-pic.jpg"
+              alt="photo of my resume linked to my linkedin account page."
+            />
+          </a>
           <p style="color: white">Placeholder words</p>
         </article>
       </section>
     </main>
 
     <footer>
-      <p style="color: black" font size="100px">
+      <p style="color: black">
         Page designed by Adam Jacob Rosenberg
       </p>
     </footer>
