made some changes image changes added new contact me github profile pic and new resume pic for resume with pic linked to linkedin profile

--- a/index.html
+++ b/index.html
@@ -41,7 +41,18 @@
         <h2>About Me:</h2>
         <article id="about-me" class="information">
           <p style="color: white">
-Hey there, I'm Adam Jacob Rosenberg, a budding software developer ready to make my mark in the tech world. When I'm not knee-deep in code, you'll often find me gaming on my trusty PC or enjoying a slice of my favorite comfort food, pizza. My loyal companion, Laila, is always by my side, keeping me company during late-night coding sessions. As a die-hard Lakers fan, I bleed purple and gold, representing my hometown of Los Angeles with pride. Growing up in the heart of LA has instilled in me a deep appreciation for innovation and technology. Now, I'm excited to leverage my skills and passion to create impactful software solutions that make a difference.</p>
+            Hey there, I'm Adam Jacob Rosenberg, a budding software developer
+            ready to make my mark in the tech world. When I'm not knee-deep in
+            code, you'll often find me gaming on my trusty PC or enjoying a
+            slice of my favorite comfort food, pizza. My loyal canine companion,
+            Laila, is always by my side, keeping me company during late-night
+            coding sessions. As a die-hard Lakers fan, I bleed purple and gold,
+            representing my hometown of Los Angeles with pride. Growing up in
+            the heart of LA has instilled in me a deep appreciation for
+            innovation and technology. Now, I'm excited to leverage my skills
+            and passion to create impactful software solutions that make a
+            difference.
+          </p>
         </article>
       </section>
 
@@ -68,11 +79,14 @@ Hey there, I'm Adam Jacob Rosenberg, a budding software developer ready to make 
       <section class="content">
         <h2>Contact Me:</h2>
         <article id="contact-me" class="information">
-          <p>
-            <a href="https://github.com/AcoderRose"
-              >Check out my profile on GitHub!
-            </a>
-          </p>
+          <a href="https://github.com/AcoderRose">
+            <img
+              class="github-profile-pic"
+              src="./assets/images/github-profile-pic.png"
+              alt="photo of my resume linked to my linkedin account page."
+            />
+          </a>
+          <p style="color: white">Check out my profile on Github!</p>
         </article>
       </section>
 
@@ -81,20 +95,18 @@ Hey there, I'm Adam Jacob Rosenberg, a budding software developer ready to make 
         <article id="resume" class="information">
           <a href="https://www.linkedin.com/in/adam-rosenberg-8213a4a1/">
             <img
-              class="coming-soon"
-              src="./assets/images/coming-soon-pic.jpg"
+              class="resume-pic"
+              src="./assets/images/resume-pic.png"
               alt="photo of my resume linked to my linkedin account page."
             />
           </a>
-          <p style="color: white">Placeholder words</p>
+          <p style="color: white">Check out my profile on Linkedin!</p>
         </article>
       </section>
     </main>
 
     <footer>
-      <p style="color: black">
-        Page designed by Adam Jacob Rosenberg
-      </p>
+      <p style="color: black">Page designed by Adam Jacob Rosenberg</p>
     </footer>
   </body>
 </html>
