Added comments to both my index.html and my style.css files, I also created a readme.md file

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-
+  <!--Above here is my title and my linked css stylesheet-->
   <body>
     <header>
       <h1>Adam Jacob Rosenberg</h1>
+      <!--
+The header includes navigation links that direct to specific sections of information on the website-->
       <nav>
         <ul>
           <li>
@@ -28,14 +30,14 @@
         </ul>
       </nav>
     </header>
-
+    <!--A placeholder image of an avatar has been added. Please note that at a later date, a personal photo will be added.-->
     <figure>
       <img
         src="./assets/images/rdj-pic.jpg"
         alt="Robert Downey Jr. Jericho bomb scene representing Adam Rosenberg"
       />
     </figure>
-
+    <!--I've included an "About Me" summary detailing information about myself.-->
     <main>
       <section class="content">
         <h2>About Me:</h2>
@@ -55,7 +57,7 @@
           </p>
         </article>
       </section>
-
+      <!--Added classes and ids for styling and linked to the nav-->
       <section class="content">
         <h2>Work:</h2>
         <article id="work" class="information">
@@ -75,7 +77,7 @@
           </a>
         </article>
       </section>
-
+      <!--Added screenshot of my github profile as well as a link to my github repository-->
       <section class="content">
         <h2>Contact Me:</h2>
         <article id="contact-me" class="information">
@@ -89,7 +91,7 @@
           <p style="color: white">Check out my profile on Github!</p>
         </article>
       </section>
-
+      <!--Added screenshot of my resume as well as a link to my linkedin profile webpage-->
       <section class="content">
         <h2>Resume:</h2>
         <article id="resume" class="information">
@@ -104,9 +106,9 @@
         </article>
       </section>
     </main>
-
+    <!--Added footer to announce that i designed this page as well as the year it was created.-->
     <footer>
-      <p style="color: black">Page designed by Adam Jacob Rosenberg</p>
+      <p style="color: black">Page designed by Adam Jacob Rosenberg, 2024</p>
     </footer>
   </body>
 </html>
