--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@ The header includes navigation links that direct to specific sections of informa
         <h2>Work:</h2>
         <article id="work" class="information">
           <a href="https://github.com/AcoderRose/Horiseon-Refractory-Code">
-            <img
+            <img 
               src="./assets/images/screenshot-of-website.png"
               alt="Horiseon-Refractory-Code"
             />
+            <p id="horiseon-title"
+            style="color: white">Horiseon-Refractory-Code</p>
           </a>
 
           <a href="https://github.com/AcoderRose/prework-study-guide">
@@ -74,6 +76,8 @@ The header includes navigation links that direct to specific sections of informa
               src="./assets/images/prework-study-guide-pic.png"
               alt="prework-study-guide"
             />
+             <p id="prework-study-guide-title" 
+             style="color: white">Prework-study-guide</p>
           </a>
         </article>
       </section>
@@ -82,7 +86,7 @@ The header includes navigation links that direct to specific sections of informa
         <h2>Contact Me:</h2>
         <article id="contact-me" class="information">
           <a href="https://github.com/AcoderRose">
-            <img
+            <img id="change"
               class="github-profile-pic"
               src="./assets/images/github-profile-pic.png"
               alt="photo of my resume linked to my linkedin account page."
