Finalized image resizing so that first projects image is even larger than other images as well as updated readme.md file with new screenshot of website so it reflects all of my grading corrections which were to make first projects image larger than all other project images and I added titles below my project images being the second central grader correction to be improved by me.

--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@ The header includes navigation links that direct to specific sections of informa
         <h2>Work:</h2>
         <article id="work" class="information">
           <a href="https://github.com/AcoderRose/Horiseon-Refractory-Code">
-            <img 
+            <img
               src="./assets/images/screenshot-of-website.png"
               alt="Horiseon-Refractory-Code"
             />
-            <p id="horiseon-title"
-            style="color: white">Horiseon-Refractory-Code</p>
+            <p id="horiseon-title" style="color: white">
+              Horiseon-Refractory-Code
+            </p>
           </a>
 
           <a href="https://github.com/AcoderRose/prework-study-guide">
@@ -76,8 +77,9 @@ The header includes navigation links that direct to specific sections of informa
               src="./assets/images/prework-study-guide-pic.png"
               alt="prework-study-guide"
             />
-             <p id="prework-study-guide-title" 
-             style="color: white">Prework-study-guide</p>
+            <p id="prework-study-guide-title" style="color: white">
+              Prework-study-guide
+            </p>
           </a>
         </article>
       </section>
@@ -86,7 +88,8 @@ The header includes navigation links that direct to specific sections of informa
         <h2>Contact Me:</h2>
         <article id="contact-me" class="information">
           <a href="https://github.com/AcoderRose">
-            <img id="change"
+            <img
+              id="change"
               class="github-profile-pic"
               src="./assets/images/github-profile-pic.png"
               alt="photo of my resume linked to my linkedin account page."
