Made changes to index.html and style.css, added a screenshot of my UCI-bootcamp-project 1 to satisfy the project requirement, its a screenshot that when clicked leads the user to our project 1 deployed site.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@ The header includes navigation links that direct to specific sections of informa
             <p id="prework-study-guide-title" style="color: white">
               Prework-study-guide
             </p>
+
+            <a href="https://jy8liu.github.io/UCI-Bootcamp-Project-1/">
+            <img
+              class="project-1"
+              src="./assets/images/screenshot-of-project1.png"
+              alt="UCI-Bootcamp-Project-1"
+            />
+            <p id="project-1-title" style="color: white">
+              UCI-Bootcamp-Project-1
+            </p>
           </a>
         </article>
       </section>
